# webwatcher

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/pipeline/: __init__.py
src/pipeline/stages/diff/: __init__.py
src/pipeline/stages/extract/: __init__.py
src/pipeline/stages/fetch/: __init__.py
src/pipeline/stages/notify/: __init__.py
src/pipeline/stages/store/: __init__.py
src/pipeline/stages/summarize/: __init__.py
src/services/: db.py  http_client.py  llm_client.py  mailer.py
src/webwatcher/: __init__.py
tests/: test_webwatcher.py
