[project]
name = "pipeline"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "migueldcdev", email = "migueldc.dev@protonmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.29,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
